<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context="com.example.osi.hackitallapp.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/welcomeTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerWelcomeText"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:textSize="35dp"
                android:fontFamily="@font/veteran_typewriter"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>


            <EditText
                android:id="@+id/registerEmailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/registerEmailHint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/ic_email"
                android:layout_marginBottom="20dp"/>


            <EditText
                android:id="@+id/registerPasswordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/registerPasswordHint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/registerPasswordValidationTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/registerPasswordValidationHint"
                android:background="@drawable/input_fields"
                android:drawableLeft="@drawable/ic_lock"/>

            <CheckBox
                android:id="@+id/checkRegisterShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showPasswordTextCheckBox"
                android:textSize="18dp"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:buttonTint="#03B6D1"
                />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerBtn"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_btn_shape"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
